test/types/seq/bradc/emptySeq3.good
Error: Illegal assignment of nil to structure of type seq (emptySeq3.chpl:1)
