test/types/seq/bradc/emptySeq3.chpl
var s: seq(int) = nil;

writeln("s is: ", s);
